--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "recycle",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "commit": "npx git-cz"
+  },
   "private": true,
   "dependencies": {
     "tslib": "^2.3.0"
@@ -20,8 +22,11 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitest/ui": "^1.0.4",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "git-cz": "^4.9.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
@@ -40,5 +45,10 @@
   ],
   "nx": {
     "includedScripts": []
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
   }
 }
