--- a/nx.json
+++ b/nx.json
@@ -9,9 +9,7 @@
   "targetDefaults": {
     "build": {
       "cache": true,
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     },
     "lint": {
       "cache": true,
@@ -24,18 +22,11 @@
     },
     "@nx/vite:test": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^default"
-      ]
+      "inputs": ["default", "^default"]
     },
     "@nx/jest:jest": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^default",
-        "{workspaceRoot}/jest.preset.js"
-      ],
+      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"],
       "options": {
         "passWithNoTests": true
       },
@@ -57,9 +48,7 @@
     },
     "groups": {
       "npm": {
-        "projects": [
-          "packages/*"
-        ],
+        "projects": ["packages/*"],
         "version": {
           "generatorOptions": {
             "packageRoot": "build/packages/{projectName}",
