--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@recycle/elements": ["packages/elements/src/index.ts"]
+      "@recycle/elements": ["packages/elements/src/index.ts"],
+      "@recycle/template": ["packages/template/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
