--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx-plugin/release": "^2.0.0",
     "@nx/eslint": "v17.2.5",
     "@nx/eslint-plugin": "v17.2.5",
     "@nx/jest": "v17.2.5",
     "@nx/js": "v17.2.5",
     "@nx/vite": "v17.2.5",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.2",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
@@ -32,6 +40,7 @@
     "jsdom": "~22.1.0",
     "nx": "v17.2.5",
     "prettier": "^2.6.2",
+    "semantic-release": "^17.4.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
