--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -4,5 +4,23 @@
   "dependencies": {},
   "main": "./index.js",
   "module": "./index.mjs",
-  "typings": "./index.d.ts"
+  "typings": "./index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guiseek/recycle.git",
+    "directory": "packages/template"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Guilherme Siquinelli",
+    "email": "email@guiseek.dev",
+    "url": "https://guiseek.dev"
+  },
+  "private": false,
+  "license": "GPLv3",
+  "bugs": {
+    "url": "https://github.com/guiseek/recycle/issues"
+  }
 }
