--- a/packages/template/project.json
+++ b/packages/template/project.json
@@ -6,25 +6,39 @@
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/template"
       }
     },
     "publish": {
       "command": "node tools/scripts/publish.mjs template {args.ver} {args.tag}",
-      "dependsOn": ["build"]
+      "dependsOn": [
+        "build"
+      ]
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "outputs": [
+        "{options.outputFile}"
+      ]
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/template/jest.config.ts"
       }
+    },
+    "release": {
+      "command": "npx semantic-release -e ./packages/template/.releaserc.json",
+      "dependsOn": [
+        "build"
+      ]
     }
   },
   "tags": []
