--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,10 +6,13 @@ on:
       - main
   pull_request:
 
+env:
+  CI: true
+
 jobs:
   main:
     name: Checklist
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: ${{!contains(github.event.head_commit.message, 'skip ci')}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
