--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,7 @@ on:
 
 env:
   CI: true
+  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -20,9 +21,19 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+
+      - name: Configure CI Git User
+        run: |
+          git config --global user.name 'guiseek'
+          git config --global user.email 'guiseek@gmail.com'
+          git remote set-url origin https://guiseek:$GITHUB_TOKEN@github.com/guiseek/recycle
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
       - run: npm ci
       - uses: nrwl/nx-set-shas@v3
         env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       # This line is needed for nx affected to work when CI is running on a PR
