--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,21 @@
 {
-  "release": {
-    "branches": ["main", "next"]
-  }
+  "repositoryUrl": "https://github.com/guiseek/recycle.git",
+  "branches": [
+    "+([0-9])?(.{+([0-9]),x}).x",
+    { "name": "main" },
+    { "name": "beta", "prerelease": true },
+    { "name": "alpha", "prerelease": true }
+  ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    [
+      "@semantic-release/exec",
+      {
+        "publishCmd": "nx run affected --target=release --args=\"--version=${nextRelease.version}\""
+      }
+    ],
+    "@semantic-release/github"
+  ]
 }
