--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "commit": "npx git-cz"
+    "nx": "nx",
+    "commit": "npx git-cz",
+    "semantic-release": "semantic-release"
   },
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guiseek/recycle.git"
+  },
+  "private": false,
   "dependencies": {
     "tslib": "^2.3.0"
   },
