--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -7,8 +7,7 @@
   "typings": "./index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guiseek/recycle.git",
-    "directory": "packages/template"
+    "url": "git+https://github.com/guiseek/recycle.git"
   },
   "publishConfig": {
     "access": "public"
